<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.microsoft.azure.kusto</groupId>
    <artifactId>kusto-client</artifactId>
    <packaging>pom</packaging>
    <version>${revision}</version>

    <url>https://github.com/Azure/azure-kusto-java</url>
    <scm>
        <url>scm:git:https://github.com/Azure/azure-kusto-java</url>
        <connection>scm:git:https://github.com/Azure/azure-kusto-java</connection>
    </scm>
    <distributionManagement>
        <downloadUrl>https://github.com/Azure/azure-kusto-java/releases</downloadUrl>
    </distributionManagement>
    <licenses>
        <license>
            <name>MIT License</name>
            <url>http://www.opensource.org/licenses/mit-license.php</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>microsoft</id>
            <name>Microsoft</name>
        </developer>
    </developers>

    <properties>
        <revision>8.0.0</revision> <!-- CHANGE THIS to adjust project version-->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>11</java.version>
        <azure-bom-version>1.2.28</azure-bom-version>
        <!-- Versions below are for several dependencies we're using in the data & ingest modules -->
        <!-- Ideally, versions below should align with latest databricks runtime dependency versions -->
        <!-- Compile dependencies -->
        <slf4j.version>1.7.36</slf4j.version>
        <commons-lang3.version>3.14.0</commons-lang3.version>
        <commons-codec.version>1.17.0</commons-codec.version>
        <apache.httpclient.version>4.5.14</apache.httpclient.version>
        <reactor-test.version>3.6.11</reactor-test.version>
        <fasterxml.jackson.core.version>2.16.0</fasterxml.jackson.core.version>
        <univocity-parsers.version>2.9.1</univocity-parsers.version>
        <!-- Test dependencies -->
        <bouncycastle.version>1.77</bouncycastle.version>
        <jsonassert.version>1.5.0</jsonassert.version>
        <sqlite-jdbc.version>3.45.3.0</sqlite-jdbc.version>
        <annotations.version>24.1.0</annotations.version>
        <!-- Other dependencies -->
        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
        <maven-assembly-plugin.version>3.7.1</maven-assembly-plugin.version>
        <maven-surefire-plugin.version>3.2.5</maven-surefire-plugin.version>
        <maven-javadoc-plugin.version>3.6.3</maven-javadoc-plugin.version>
        <maven-source-plugin.version>3.3.0</maven-source-plugin.version>
        <maven-dependency-plugin.version>3.6.1</maven-dependency-plugin.version>
        <flatten-maven-plugin.version>1.2.7</flatten-maven-plugin.version>
        <junit.version>5.10.2</junit.version>
        <mockito.version>5.11.0</mockito.version>
        <jacoco.version>0.8.11</jacoco.version>
    </properties>

    <modules>
        <module>ingest</module>
        <module>data</module>
        <module>samples</module>
        <module>quickstart</module>
    </modules>

    <build>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <version>${flatten-maven-plugin.version}</version>
                <configuration>
                    <flattenMode>oss</flattenMode>
                </configuration>
                <executions>
                    <!-- enable flattening -->
                    <execution>
                        <id>flatten</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>flatten</goal>
                        </goals>
                    </execution>
                    <!-- ensure proper cleanup -->
                    <execution>
                        <id>flatten.clean</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>net.revelc.code.formatter</groupId>
                <artifactId>formatter-maven-plugin</artifactId>
                <version>2.16.0</version>
                <configuration>
                    <!--suppress UnresolvedMavenProperty -->
                    <configFile>${session.executionRootDirectory}/kusto-style.xml</configFile>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
